<resources>
    <string name="app_name">ColombiaDiversa</string>
    <string name="Description_title">Descripción</string>
    <string name="Location_title">Ubicación</string>
    <string name="Temperature_title">Temperatura</string>
    <string name="Activities_title">Actividades y/o atracciones</string>
    <string name="Button">Regresar</string>
    <string name="Name_Guejar">Río Guejar</string>
    <string name="DescriptionGuejar">Río de aguas claras y lecho rocoso enclavado en un cañon formado en la Sierra de La Macarena. Lugar de naturaleza y belleza exuberante.</string>
    <string name="LocationGuejar">Mesetas y San Juan de Arama, Departamento del Meta</string>
    <string name="TemperatureGuejar">Entre 20 y 35°C</string>
    <string name="ActivitiesGuejar">Bañarse en el río, canotaje, pesca deportiva, acampar.</string>
    <string name="Name_Termales">Termales del Ruiz</string>
    <string name="DescriptionTermales">Ubicados en el Parque Nacional Natural de los Nevados, a 3500 metros de altura sobre el nivel del mar, a sólo 10 km del Nevado del Ruíz y 36 km de Manizales. Con una ubicación privilegiada y un paisaje impactante por la belleza natural que posee, espectacular vista a la ciudad de Manizales, y una noche de firmamento con variedad de azules lleno de estrellas en conjunto con la luna a un paso de las nubes.</string>
    <string name="temperatureTermales">min 3°C max 10°C</string>
    <string name="LocationTermales">Manizales - Caldas</string>
    <string name="ActivitiesTermales">Piscina termal - Sendero Ecológico - Camino de los colibries</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Configuración</string>
    <string name="check_box_1">Autorizar las notificaciones</string>
    <string name="check_box_2">Sonido para las notificaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>