<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/activities_title"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:text="@string/Activities_title"
        android:textSize="20sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="520dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/activities"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:text="@string/ActivitiesGuejar"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="560dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:text="@string/TemperatureGuejar"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="493dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/description_title"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:text="@string/Description_title"
        android:textSize="20sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="287dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:text="@string/DescriptionGuejar"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="318dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/temperature_title"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:text="@string/Temperature_title"
        android:textSize="20sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="458dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="378dp"
        android:layout_height="219dp"
        app:srcCompat="@drawable/guejar"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="48dp"
        android:contentDescription="Image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:text="@string/Name_Guejar"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:text="@string/LocationGuejar"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="414dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/button"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:text="@string/Button"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="607dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/location_title"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/Location_title"
        android:textSize="20sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="383dp"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>