<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PoiDetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray">

            <TextView
                android:id="@+id/name"
                android:layout_width="312dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:text="Río Guejar"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="378dp"
                android:layout_height="219dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/guejar" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Description_title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/description"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/DescriptionGuejar"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/description_title"
                app:layout_constraintTop_toBottomOf="@+id/description_title" />

            <TextView
                android:id="@+id/location_title"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Location_title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/location"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/LocationGuejar"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/location_title"
                app:layout_constraintTop_toBottomOf="@+id/location_title" />

            <TextView
                android:id="@+id/temperature_title"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Temperature_title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/TemperatureGuejar"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/temperature_title"
                app:layout_constraintTop_toBottomOf="@+id/temperature_title" />

            <TextView
                android:id="@+id/activities_title"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Activities_title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/temperature"
                app:layout_constraintTop_toBottomOf="@+id/temperature" />

            <TextView
                android:id="@+id/activities"
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/ActivitiesGuejar"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/location"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/activities_title"
                app:layout_constraintTop_toBottomOf="@+id/activities_title"
                app:layout_constraintVertical_bias="0.049" />

            <Button
                android:id="@+id/button"
                android:layout_width="139dp"
                android:layout_height="51dp"
                android:layout_marginTop="28dp"
                android:text="@string/Button"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/activities"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activities" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>